--- a/TypeScript/project/package.json
+++ b/TypeScript/project/package.json
@@ -2,5 +2,8 @@
     "scripts": {
         "dev": "nodemon --watch src -e ts --exec ts-node src/index.ts",
         "build": "rd /s /q dist & tsc"
+    },
+    "dependencies": {
+        "@types/node": "^16.6.2"
     }
 }
